--- a/src/app/components/chat-layout/chat-layout.component.scss
+++ b/src/app/components/chat-layout/chat-layout.component.scss
@@ -8,7 +8,7 @@
     gap: 1rem;
   }
 
-  .chat-list-container {
+  .chat-list-container { ///////////////
     background-color: #ffffff;
     border-radius: 1rem;
     padding: 1.25rem;
