--- a/src/app/components/chat-layout/chat-layout.component.scss
+++ b/src/app/components/chat-layout/chat-layout.component.scss
@@ -10,14 +10,16 @@
 
   .chat-list-container { ///////////////
     background-color: #ffffff;
-    border-radius: 1rem;
-    padding: 1.25rem;
+    border-radius: 1.5rem;
+    padding: 0rem;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.06);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     min-height: 100%;
     overflow-y: auto;
+    position: relative;
+    top: 0.3%;
 
     h2 {
       font-size: 1.5rem;
