--- a/src/app/components/chat-room/chat-room.component.scss
+++ b/src/app/components/chat-room/chat-room.component.scss
@@ -3,11 +3,12 @@
   margin: .2rem auto;
   padding: 2rem;
   background-color: #ffffff;
-  border-radius: 1.5rem;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.07);
+  border-top-right-radius: 1.5rem;
+  border-bottom-right-radius: 1.5rem;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.07);
   display: flex;
   flex-direction: column;
-  height: 90.5vh;
+  height: 100%;
 
   h2 {
     text-align: center;
