--- a/src/app/components/chat-room/chat-room.component.html
+++ b/src/app/components/chat-room/chat-room.component.html
@@ -2,7 +2,7 @@
 <div class="chat-room-container">
   <h2>{{ getReceiverName() }}</h2>
 
-  <div class="messages" #chatContainer>
+  <div class="messages" #chatContainer (scroll)="onScroll()">
     <div 
       *ngFor="let msg of messages()" 
       class="message"
@@ -32,7 +32,7 @@
       autocomplete="off"  
     />
     <button type="submit" [disabled]="!newMessage.trim()" >Send</button>
-    <button (click)="scrollToBottom()">Force Scroll</button>
+    <button *ngIf="showScrollButton" (click)="scrollToBottom()" class="scroll-button">🖕</button>
   </form>
 </div>
 
