--- a/src/app/components/chat-room/chat-room.component.scss
+++ b/src/app/components/chat-room/chat-room.component.scss
@@ -14,15 +14,15 @@
   .scroll-button {
     position: absolute;
     bottom: 120px; /* Above input box */
-    right: 30px;
+    right: 45px;
     z-index: 10;
-    padding: 8px 12px;
+    padding: 2px;
     background-color: #007bff;
     color: white;
     border: none;
     border-radius: 20px;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 4px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
     transition: opacity 0.3s ease;
   }
