--- a/src/app/components/chat-room/chat-room.component.scss
+++ b/src/app/components/chat-room/chat-room.component.scss
@@ -3,8 +3,7 @@
   margin: 0.2rem auto;
   padding: 2rem;
   background-color: #ffffff;
-  border-top-right-radius: 1.5rem;
-  border-bottom-right-radius: 1.5rem;
+  border-radius: 1.5rem;
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.07);
   display: flex;
   flex-direction: column;
